# dayplanner-back

./: .gitignore  Dockerfile  README.md  compose.yml  config.py  env_example  main.py  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 163c83dfb807_token_add_column_google_tokens.py  16cbe45cbb18_initial_migrations_2.py  6409c4bbf1a2_initial_migration.py  bccd89927320_activity_add_column_source.py
app/: calendar_events.py
app/authentication/: auth.py  security.py
app/database/: database.py
app/lib/: calendar_events.py
app/models/: activity.py  google_account.py  token.py  user.py  user_availability.py  user_info.py  useravailability.py  userinfo.py
app/routers/: activity.py  auth.py  google_calendar.py  openai.py  user.py  user_info.py
app/schemas/: activity.py  google_account.py  token.py  user.py  user_availability.py  user_info.py
ollama/: Dockerfile  ollama-entrypoint.sh
